--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -990,7 +990,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">BeeMazing Help Center aa1</div>
+        <div class="title">BeeMazing Help Center aa1aaa</div>
     </div>
 
     <div class="container">
