--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -1381,56 +1381,55 @@ async function finishTask(currentUser, task, selectedDate) {
 
 
 
-        async function loadNotifications(currentUser) {
+
+        async function loadNotifications(userName) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     const offerHelpBadge = document.getElementById("offerHelpBadge");
     const needHelpBadge = document.getElementById("needHelpBadge");
-
-    if (!adminEmail || !currentUser) {
-        console.error("loadNotifications: Missing adminEmail or currentUser");
+    if (!adminEmail || !userName) {
+        console.error("loadNotifications: Missing adminEmail or userName");
         offerHelpBadge.style.display = "none";
         needHelpBadge.style.display = "none";
         return;
     }
-
     try {
-        const res = await fetch(`https://beemazing.onrender.com/api/notifications?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
+        const res = await fetch(`https://beemazing.onrender.com/api/notifications?adminEmail=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}&t=${Date.now()}`, {
             method: "GET",
             headers: { "Content-Type": "application/json" }
         });
         const data = await res.json();
-        if (!res.ok) throw new Error(data.error || "Failed to fetch notifications");
-
-        const notifications = data.notifications || [];
-
-        let offerHelpCount = 0;
-        let needHelpCount = 0;
-
-        for (const notif of notifications) {
-            if (notif.user === currentUser) {
-                if (notif.offerType === "offerHelp") {
-                    offerHelpCount += notif.taskCount || 0;
-                }
-                if (notif.offerType === "needHelp") {
-                    needHelpCount += notif.taskCount || 0;
-                }
-            }
+        console.log("Load notifications response:", data);
+        if (!res.ok) {
+            throw new Error(data.error || "Failed to fetch notifications");
         }
-
-        offerHelpBadge.textContent = offerHelpCount > 0 ? `${offerHelpCount}` : "";
-        offerHelpBadge.style.display = offerHelpCount > 0 ? "block" : "none";
-
-        needHelpBadge.textContent = needHelpCount > 0 ? `${needHelpCount}` : "";
-        needHelpBadge.style.display = needHelpCount > 0 ? "block" : "none";
-
+        const notifications = data.notifications || [];
+        if (notifications.length === 0) {
+            offerHelpBadge.style.display = "none";
+            needHelpBadge.style.display = "none";
+            return;
+        }
+        const offerHelpNotifications = notifications.filter(n => n.offerType === "offerHelp");
+        const needHelpNotifications = notifications.filter(n => n.offerType === "needHelp");
+        const offerHelpCount = offerHelpNotifications.reduce((sum, n) => sum + n.taskCount, 0);
+        const needHelpCount = needHelpNotifications.reduce((sum, n) => sum + n.taskCount, 0);
+        if (offerHelpCount > 0) {
+            offerHelpBadge.textContent = `${offerHelpCount}`;
+            offerHelpBadge.style.display = "block";
+        } else {
+            offerHelpBadge.style.display = "none";
+        }
+        if (needHelpCount > 0) {
+            needHelpBadge.textContent = `${needHelpCount}`;
+            needHelpBadge.style.display = "block";
+        } else {
+            needHelpBadge.style.display = "none";
+        }
     } catch (err) {
         console.error("Failed to load notifications:", err.message);
         offerHelpBadge.style.display = "none";
         needHelpBadge.style.display = "none";
     }
 }
-
-
 
 
 
