--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -990,7 +990,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">BeeMazing Help Center 111</div>
+        <div class="title">BeeMazing Help Center a1</div>
     </div>
 
     <div class="container">
@@ -1221,16 +1221,19 @@ submitOfferBtn.addEventListener("click", async function () {
         }
 
         // Send notification
-// Send notification
-const notificationRes = await fetch("https://beemazing.onrender.com/api/notifications", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-        adminEmail,
-        offer // <-- send the full `offer` object including `type`, `tasks`, `helpMode`, etc.
-    })
-});
-
+        const notificationRes = await fetch("https://beemazing.onrender.com/api/notifications", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+                adminEmail,
+                offer: {
+                    type: selectedHelpType,
+                    tasks: selectedTasks,
+                    fromUser: currentUser,
+                    expiresAt: offer.expiresAt
+                }
+            })
+        });
         const notificationData = await notificationRes.json();
         console.log("Send notification response:", notificationData);
         if (!notificationRes.ok || !notificationData.success) {
