--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -1024,7 +1024,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">BeeMazing Help Center 1</div>
+        <div class="title">BeeMazing Help Center</div>
     </div>
 
     <div class="container">
