--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -1055,7 +1055,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">BeeMazing Help Center</div>
+        <div class="title">BeeMazing Help Center Y8</div>
         <div class="back-btn-container">
             <button onclick="goBack()" class="back-btn-text">← Back</button>
         </div>
