--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -365,7 +365,7 @@ body {
 <body>
     <div class="header">
         <i class="fas fa-bars menu-icon" aria-label="Menu"></i>
-        <div class="title">BeeMazing</div>
+        <div class="title">BeeMazing 1</div>
     </div>
 
     <div id="logoutContainer" class="logout-container">
@@ -383,6 +383,10 @@ body {
         <div class="modal-content">
             <h3>Add a Bee</h3>
             <input type="text" id="usernameInput" placeholder="Bee name" />
+            <div style="margin-top: 10px; text-align: left;">
+              <label><input type="radio" name="beeRole" value="Admin" style="margin-right: 8px;" /> Parent Bee</label><br>
+              <label><input type="radio" name="beeRole" value="User" style="margin-right: 8px;" checked /> Child Bee</label>
+            </div>            
             <p id="errorMessage" style="color: var(--danger-color); font-size: 14px; display: none;">Please enter a valid name</p>
             <button id="submitUserBtn">Add</button>
         </div>
