Parent/Child Bee #2

--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -365,7 +365,7 @@ body {
 <body>
     <div class="header">
         <i class="fas fa-bars menu-icon" aria-label="Menu"></i>
-        <div class="title">BeeMazing 1</div>
+        <div class="title">BeeMazing 1y</div>
     </div>
 
     <div id="logoutContainer" class="logout-container">
