--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -365,7 +365,7 @@ body {
 <body>
     <div class="header">
         <i class="fas fa-bars menu-icon" aria-label="Menu"></i>
-        <div class="title">BeeMazing 4</div>
+        <div class="title">BeeMazing 5</div>
     </div>
 
     <div id="logoutContainer" class="logout-container">
@@ -383,16 +383,19 @@ body {
         <div class="modal-content">
             <h3>Add a Bee</h3>
             <input type="text" id="usernameInput" placeholder="Bee name" />
-            <div style="margin-top: 10px; text-align: left;">
-                <label style="display: inline-flex; align-items: center; margin-bottom: 10px; cursor: pointer;">
+
+            <div style="margin-top: 10px; display: flex; flex-direction: column; gap: 10px;">
+                <label style="display: flex; align-items: center; white-space: nowrap; font-size: 16px; cursor: pointer;">
                   <input type="radio" name="beeRole" value="Admin" style="margin-right: 10px; accent-color: var(--primary-color);" />
-                  <span>Parent Bee</span>
-                </label><br>
-                <label style="display: inline-flex; align-items: center; cursor: pointer;">
+                  Parent Bee
+                </label>
+                <label style="display: flex; align-items: center; white-space: nowrap; font-size: 16px; cursor: pointer;">
                   <input type="radio" name="beeRole" value="User" checked style="margin-right: 10px; accent-color: var(--primary-color);" />
-                  <span>Child Bee</span>
+                  Child Bee
                 </label>
               </div>
+              
+
             <p id="errorMessage" style="color: var(--danger-color); font-size: 14px; display: none;">Please enter a valid name</p>
             <button id="submitUserBtn">Add</button>
         </div>
