--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -372,22 +372,24 @@ body {
   height: 18px;
   border: 2px solid var(--primary-color);
   border-radius: 50%;
-  margin-right: 8px;
+  display: inline-block;
   position: relative;
-  cursor: pointer;
+  margin-right: 8px;
+  vertical-align: middle;
   background-color: transparent;
 }
 
-.modal-content input[type="radio"]:checked::before {
+.modal-content input[type="radio"]:checked::after {
   content: "";
-  width: 10px;
-  height: 10px;
-  background-color: var(--primary-color);
-  border-radius: 50%;
   position: absolute;
   top: 3px;
   left: 3px;
+  width: 8px;
+  height: 8px;
+  background-color: var(--primary-color);
+  border-radius: 50%;
 }
+
 /* Selecting Parent/Child Bee */
 
 
@@ -396,7 +398,7 @@ body {
 <body>
     <div class="header">
         <i class="fas fa-bars menu-icon" aria-label="Menu"></i>
-        <div class="title">BeeMazing 7</div>
+        <div class="title">BeeMazing 8</div>
     </div>
 
     <div id="logoutContainer" class="logout-container">
@@ -418,13 +420,13 @@ body {
        
 
             <div style="margin-top: 10px;">
-                <label style="font-size: 16px; cursor: pointer; display: flex; align-items: center; margin-bottom: 10px;">
+                <label style="display: flex; align-items: center; font-size: 16px; margin-bottom: 10px; cursor: pointer;">
                   <input type="radio" name="beeRole" value="Admin" />
-                  Parent Bee
+                  <span>Parent Bee</span>
                 </label>
-                <label style="font-size: 16px; cursor: pointer; display: flex; align-items: center;">
+                <label style="display: flex; align-items: center; font-size: 16px; cursor: pointer;">
                   <input type="radio" name="beeRole" value="User" checked />
-                  Child Bee
+                  <span>Child Bee</span>
                 </label>
               </div>
               
