--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -362,25 +362,31 @@ body {
 
 
 
+
+/* Parent/Child Bee Selection */
+
 .radio-group {
-    text-align: left;
-    margin: 15px 0;
+    margin-top: 15px;
 }
 
-.radio-group label {
-    display: block;
+.radio-option {
+    display: flex;
+    align-items: center;
+    margin-bottom: 12px;
     font-size: 16px;
-    margin-bottom: 10px;
     cursor: pointer;
+    gap: 10px;
     color: var(--text-color);
 }
 
-.radio-group input[type="radio"] {
-    margin-right: 10px;
+.radio-option input[type="radio"] {
     accent-color: var(--primary-color);
-    transform: scale(1.2);
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
 }
 
+/* Parent/Child Bee Selection */
 
 
     </style>
@@ -388,7 +394,7 @@ body {
 <body>
     <div class="header">
         <i class="fas fa-bars menu-icon" aria-label="Menu"></i>
-        <div class="title">BeeMazing 7</div>
+        <div class="title">BeeMazing 9</div>
     </div>
 
     <div id="logoutContainer" class="logout-container">
@@ -410,13 +416,13 @@ body {
        
 
             <div class="radio-group">
-                <label>
+                <label class="radio-option">
                     <input type="radio" name="beeRole" value="Admin">
-                    Parent Bee
+                    <span>Parent Bee</span>
                 </label>
-                <label>
+                <label class="radio-option">
                     <input type="radio" name="beeRole" value="User" checked>
-                    Child Bee
+                    <span>Child Bee</span>
                 </label>
             </div>
             
