--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -308,20 +308,22 @@ body {
     transform: translateX(-50%);
     background: var(--primary-color);
     color: var(--secondary-color);
-    padding: 14px 26px;
-    font-size: 18px;
+    padding: 10px 20px; /* tighter padding */
+    font-size: 16px;
     font-weight: 600;
     border: none;
     border-radius: 12px;
     cursor: pointer;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     z-index: 99;
+    white-space: nowrap; /* prevent wrapping */
     transition: all 0.3s ease;
 }
 .add-user-btn-text:hover {
     background: #FFB300;
     transform: translateX(-50%) scale(1.05);
 }
+
 
         /* Text Add a Bee button isntead of the '+' button */
 
