--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -66,7 +66,7 @@ body {
         .content {
     position: absolute;
     top: calc(var(--header-height) + 60px); /* added 60px to push below logout */
-    bottom: calc(var(--footer-height) + var(--add-btn-height));
+    bottom: var(--footer-height);
     width: 100%;
     padding: 20px;
     overflow-y: auto;
@@ -421,7 +421,7 @@ body {
 <body>
     <div class="header">
         <i class="fas fa-bars menu-icon" aria-label="Menu"></i>
-        <div class="title">BeeMazing 9</div>
+        <div class="title">BeeMazing 77</div>
     </div>
 
     <div id="logoutContainer" class="logout-container">
